# kiln

./: .cppcheck-suppressions  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
assets/models/: armadillo.kmesh  cheburashka.kmesh  cow.kmesh  fandisk.kmesh  fetch.sh  spot.kmesh
demos/: CMakeLists.txt
demos/buffon/: CMakeLists.txt  main.c
game/: CMakeLists.txt  camera.c  camera.h  components.c  components.h  ecs.c  ecs.h  game_input.h  gui.c  gui.h  logger.h  main.c  math3d.h  mesh.c  mesh.h  systems.c  systems.h  texture.c  texture.h  voxel.c  voxel.h  world.c  world.h
game/shaders/: basic.frag  basic.gl.frag  basic.gl.vert  basic.vert  debug.frag  hud.frag  hud.gl.frag  hud.vert  mesh.comp  outline.frag  outline.gl.frag  outline.gl.vert  outline.vert  skybox.frag  skybox.gl.frag  skybox.gl.vert  skybox.vert  ui.frag  ui.gl.frag  ui.gl.vert  ui.vert
saves/default/: chunk_0_0.kch
scripts/: gen_clangd.sh
scripts/hooks/: pre-commit  pre-push
src/app/: CMakeLists.txt  app.c  app.h  main.c
src/assets/: CMakeLists.txt  assets.c  assets.h  image.c  image.h  kmesh.c  kmesh.h  obj.c  obj.h  scene.c  scene.h
src/camera/: CMakeLists.txt  camera.c  camera.h  fps_camera.c  fps_camera.h
src/core/: CMakeLists.txt  aabb.c  aabb.h  arena.c  arena.h  core.c  core.h  frustum.c  frustum.h  fs.c  fs.h  input.c  input.h  linalg.c  linalg.h  log.c  log.h  mesh.c  mesh.h  noise.c  noise.h  timer.c  timer.h
src/ecs/: CMakeLists.txt  archetype.c  archetype.h  component.h  ecs.c  ecs.h  entity.h  query.c  query.h  signature.h  world.c  world.h
src/gizmo/: CMakeLists.txt  gizmo.c  gizmo.h
src/physics/: CMakeLists.txt  physics.c  physics.h
src/platform/: CMakeLists.txt  platform.h  platform_linux_x11.c  platform_win.c
src/render/: CMakeLists.txt  font8x8.h  particles.c  particles.h  r_buffer.c  r_command.c  r_draw.c  r_instance.c  r_pipeline.c  r_renderer.c  r_swapchain.c  r_texture.c  render.c  render.h  render_internal.h  render_vk.c  renderer.h
src/render/shaders/: bloom_blur.frag  bloom_composite.frag  bloom_threshold.frag  cube.vert  cull.comp  fullscreen.vert  mesh.frag  mesh.vert  mesh_inst.vert  particles.comp  shadow.vert  shadow_inst.vert  skybox.frag  skybox.vert  text.vert
src/settings/: CMakeLists.txt  settings.c  settings.h
src/texture/: CMakeLists.txt  texture.c  texture.h
src/tools/: CMakeLists.txt  mesh_bake.c
src/ui/: CMakeLists.txt  hud.c  hud.h  ui.c  ui.h  ui_gl.c  ui_gl.h
src/voxel/: CMakeLists.txt  kv.h  kv_block.c  kv_internal.h  kv_mesh.c  kv_world.c
src/voxel/shaders/: voxel.frag  voxel.vert
tests/: CMakeLists.txt  test_arena.c  test_assets.c  test_core_geom.c  test_ecs.c  test_math.c  test_physics.c  test_voxel.c
